[package]
name = "btc-tvl"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = { version = "0.32.5", features = ["serde"] }
chrono = "0.4.39"
dotenv = "0.15.0"
futures = "0.3.31"
hex = "0.4.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.217", features = ["serde_derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
